# icodes-ui

./: .gitignore  README.md  api_endpoints.py  db_engine.py  pyproject.toml  run.py  settings.py
static/: styles.css
templates/: anotherPage.html  base.html  home.html  repoInfo.html
