[tool.poetry]
name = "icodes-ui"
version = "0.1.0"
description = "UI made with FastAPI and Bootstrap 5 for iCODES"
authors = ["Zoom30 <danielabraha99@gmail.com>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"
icodes = "^0.1.3"
ruff = "^0.4.1"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
